// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Container) TokenAllowance should render 1`] = `
<div>
  Loading allowance
</div>
`;

exports[`(Container) TokenAllowance will receive right actions 1`] = `
Object {
  "actions": Object {},
}
`;

exports[`(Container) TokenAllowance will receive right props 1`] = `
Object {
  "currentTokenAllowance": null,
}
`;
